--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,16 @@
 {
   "name": "ys-rekaf",
   "version": "0.1.0",
+  "main": "dist/rekaf.js",
   "authors": [
     "Richard Herries <richard@youngskilled.com>"
   ],
   "description": "Rekaf a fake select element",
   "license": "MIT",
-  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+    "bower_components"
   ],
   "dependencies": {
     "jquery": "1.11",
