--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "gulp-clean": "^0.3.0",
     "gulp-concat": "^2.2.0",
     "gulp-git": "^0.4.3",
+    "gulp-header": "^1.0.2",
+    "gulp-jscs": "^0.5.0",
     "gulp-jshint": "^1.6.2",
     "gulp-minify-css": "^0.3.4",
     "gulp-notify": "^1.3.1",
+    "gulp-rename": "^1.2.0",
     "gulp-sass": "^0.7.2",
-    "gulp-uglify": "^0.3.0",
-    "gulp-jscs": "^0.5.0",
-    "gulp-header": "^1.0.2"
+    "gulp-uglify": "^0.3.0"
   }
 }
