--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ys-rekaf",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "main": "dist/rekaf.js",
   "authors": [
     "Richard Herries <richard@youngskilled.com>"
@@ -13,7 +13,9 @@
     "bower_components"
   ],
   "dependencies": {
-    "jquery": ">1.11",
-    "normalize-scss": ">3.0.1"
+    "jquery": ">1.7"
+  },
+  "devDependencies": {
+    "normalize-scss": "~3.0.2"
   }
 }
